# Keep WNEntryPoint first. It has some special flags that have to propagate
# to other targets.
add_subdirectory(WNEntryPoint)
add_subdirectory(WNTesting)

add_subdirectory(WNContainers)
add_subdirectory(WNCore)
add_subdirectory(WNFibers)
add_subdirectory(WNFileSystem)
add_subdirectory(WNDeprecatedFileSystem)
add_subdirectory(WNGraphics)
add_subdirectory(WNLogging)
add_subdirectory(WNMath)
add_subdirectory(WNMemory)
add_subdirectory(WNNetworking)
add_subdirectory(WNPlatform)
add_subdirectory(WNScripting)
add_subdirectory(WNThreads)
add_subdirectory(WNDeprecatedScripting)
add_subdirectory(WNUtils)
